--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Inicio - Kittpad</title>
-	<link rel="icono cabecera" type="image/png" href="IMG/k.png"/>
+	<link rel="icon" type="image/png" href="IMG/k.ico"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"/>
 	<link rel="stylesheet" href="CSS/main.css"/>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -16,9 +16,33 @@
 					<a href="/" title="Kittpad">Kittpad</a>
 				</li>
 				<li>
-					<label>Descubre
-                    	
-					</label>
+					<option value="" disaled selected> Descubrir</option>
+					<option value ="1">NAVEGAR</option>
+					<option value ="2">Acción</option>
+					<option value ="3">Aventura</option>
+					<option value ="4">Chick-Lit</option>
+					<option value ="5">Ciencia Ficción</option>
+					<option value ="6">Clásicos</option>
+					<option value ="7">De Todo</option>
+					<option value ="8">Espiritual</option>
+					<option value ="9">Fanfic</option>
+					<option value ="10">Fantasía</option>
+					<option value ="11">Ficción General</option>
+					<option value ="12">Historia Corta</option>
+					<option value ="13">Hombres Lobo</option>
+					<option value ="14">Humor</option>
+					<option value ="15">Misterio / Suspenso</option>
+					<option value ="16">No Ficción</option>
+					<option value ="17">Novela histórica</option>
+					<option value ="18">Novela Juvenil</option>
+					<option value ="19">Paranormal</option>
+					<option value ="20">Poesía</option>
+					<option value ="21">Romance</option>
+					<option value ="22">Terror</option>
+					<option value ="23">Vampiros</option>
+					<option value ="24">#lgbt</option>
+					<option value ="25">#wattys2017</option>
+					<option value ="26">#bts</option>
 				</li>
 				<li></li>
 				<li></li>
