Agregando tag select

--- a/index.html
+++ b/index.html
@@ -16,38 +16,55 @@
 					<a href="/" title="Kittpad">Kittpad</a>
 				</li>
 				<li>
-					<option value="" disaled selected> Descubrir</option>
-					<option value ="1">NAVEGAR</option>
-					<option value ="2">Acción</option>
-					<option value ="3">Aventura</option>
-					<option value ="4">Chick-Lit</option>
-					<option value ="5">Ciencia Ficción</option>
-					<option value ="6">Clásicos</option>
-					<option value ="7">De Todo</option>
-					<option value ="8">Espiritual</option>
-					<option value ="9">Fanfic</option>
-					<option value ="10">Fantasía</option>
-					<option value ="11">Ficción General</option>
-					<option value ="12">Historia Corta</option>
-					<option value ="13">Hombres Lobo</option>
-					<option value ="14">Humor</option>
-					<option value ="15">Misterio / Suspenso</option>
-					<option value ="16">No Ficción</option>
-					<option value ="17">Novela histórica</option>
-					<option value ="18">Novela Juvenil</option>
-					<option value ="19">Paranormal</option>
-					<option value ="20">Poesía</option>
-					<option value ="21">Romance</option>
-					<option value ="22">Terror</option>
-					<option value ="23">Vampiros</option>
-					<option value ="24">#lgbt</option>
-					<option value ="25">#wattys2017</option>
-					<option value ="26">#bts</option>
+					<label></label>
+					<select name="category" id="category">
+						<option value="" disaled selected>Descubrir</option>
+						<option value ="1">NAVEGAR</option>
+						<option value ="2">Acción</option>
+						<option value ="3">Aventura</option>
+						<option value ="4">Chick-Lit</option>
+						<option value ="5">Ciencia Ficción</option>
+						<option value ="6">Clásicos</option>
+						<option value ="7">De Todo</option>
+						<option value ="8">Espiritual</option>
+						<option value ="9">Fanfic</option>
+						<option value ="10">Fantasía</option>
+						<option value ="11">Ficción General</option>
+						<option value ="12">Historia Corta</option>
+						<option value ="13">Hombres Lobo</option>
+						<option value ="14">Humor</option>
+						<option value ="15">Misterio / Suspenso</option>
+						<option value ="16">No Ficción</option>
+						<option value ="17">Novela histórica</option>
+						<option value ="18">Novela Juvenil</option>
+						<option value ="19">Paranormal</option>
+						<option value ="20">Poesía</option>
+						<option value ="21">Romance</option>
+						<option value ="22">Terror</option>
+						<option value ="23">Vampiros</option>
+						<option value ="24">#lgbt</option>
+						<option value ="25">#wattys2017</option>
+						<option value ="26">#bts</option>
+					</select>
+				</li>
+				<li>
+					<a href="/" title="Crear">Crear</a>
+				</li>
+				<li>
+					<label></label>
+					<select name="comunidad" id="comunidad">
+						<option value="" disaled selected>Comunidad</option>
+						<option value ="1">Clubs</option>
+						<option value ="2">Los Wattys</option>
+						<option value ="3">Concursos de escritura</option>
+						<option value ="4">Escritores</option>
+						<option value ="5">#JustWriteIt</option>
+					</select>
 				</li>
 				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
+				<li>
+					<a href="/" title="Perfil">Perfil</a>
+				</li>
 			</ul>
 		</nav>	
 	</section>
