--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					</select>
 				</li>
 				<li class="col-md-4">
-					<div class="field">
+					<div class="SearchBar">
 						<input type="text" name="Search_bar" id="Search_bar" placeholder="Busca historias y personas" required>
 						<link rel="icon" type="image.png" href="IMG/lupita.png"/>
 					</div>
