se agrega botón y lupa

--- a/index.html
+++ b/index.html
@@ -12,63 +12,63 @@
 	<section class="first">
 		<nav>
 			<ul class="wrapper" id="main wrapper">
-				<li class="col-md-1">
+				<li>
 					<a href="/" title="Kittpad">Kittpad</a>
 				</li>
-				<li class="col-md-2">
+				<li>
 					<label></label>
-					<select name="category" id="category">
+					<select name="category" class="category">
 						<option value="" disaled selected>Descubrir</option>
-						<option value ="1">NAVEGAR</option>
-						<option value ="2">Acción</option>
-						<option value ="3">Aventura</option>
-						<option value ="4">Chick-Lit</option>
-						<option value ="5">Ciencia Ficción</option>
-						<option value ="6">Clásicos</option>
-						<option value ="7">De Todo</option>
-						<option value ="8">Espiritual</option>
-						<option value ="9">Fanfic</option>
-						<option value ="10">Fantasía</option>
-						<option value ="11">Ficción General</option>
-						<option value ="12">Historia Corta</option>
-						<option value ="13">Hombres Lobo</option>
-						<option value ="14">Humor</option>
-						<option value ="15">Misterio / Suspenso</option>
-						<option value ="16">No Ficción</option>
-						<option value ="17">Novela histórica</option>
-						<option value ="18">Novela Juvenil</option>
-						<option value ="19">Paranormal</option>
-						<option value ="20">Poesía</option>
-						<option value ="21">Romance</option>
-						<option value ="22">Terror</option>
-						<option value ="23">Vampiros</option>
-						<option value ="24">#lgbt</option>
-						<option value ="25">#wattys2017</option>
-						<option value ="26">#bts</option>
+						<option value ="1" id="category">NAVEGAR</option>
+						<option value ="2" id="category">Acción</option>
+						<option value ="3" id="category">Aventura</option>
+						<option value ="4" id="category">Chick-Lit</option>
+						<option value ="5" id="category">Ciencia Ficción</option>
+						<option value ="6" id="category">Clásicos</option>
+						<option value ="7" id="category">De Todo</option>
+						<option value ="8" id="category">Espiritual</option>
+						<option value ="9" id="category">Fanfic</option>
+						<option value ="10" id="category">Fantasía</option>
+						<option value ="11" id="category">Ficción General</option>
+						<option value ="12" id="category">Historia Corta</option>
+						<option value ="13" id="category">Hombres Lobo</option>
+						<option value ="14" id="category">Humor</option>
+						<option value ="15" id="category">Misterio / Suspenso</option>
+						<option value ="16" id="category">No Ficción</option>
+						<option value ="17" id="category">Novela histórica</option>
+						<option value ="18" id="category">Novela Juvenil</option>
+						<option value ="19" id="category">Paranormal</option>
+						<option value ="20" id="category">Poesía</option>
+						<option value ="21" id="category">Romance</option>
+						<option value ="22" id="category">Terror</option>
+						<option value ="23" id="category">Vampiros</option>
+						<option value ="24" id="category">#lgbt</option>
+						<option value ="25" id="category">#wattys2017</option>
+						<option value ="26" id="category">#bts</option>
 					</select>
 				</li>
-				<li class="col-md-1">
-					<a href="/" title="Crear">Crear</a>
+				<li>
+					<a href="/" title="Crear" class="crear">Crear</a>
 				</li>
-				<li class="col-md-2">
+				<li>
 					<label></label>
-					<select name="comunidad" id="comunidad">
+					<select name="comunidad" class="comunidad">
 						<option value="" disaled selected>Comunidad</option>
-						<option value ="1">Clubs</option>
-						<option value ="2">Los Wattys</option>
-						<option value ="3">Concursos de escritura</option>
-						<option value ="4">Escritores</option>
-						<option value ="5">#JustWriteIt</option>
+						<option value ="1" id="category">Clubs</option>
+						<option value ="2" id="category">Los Wattys</option>
+						<option value ="3" id="category">Concursos de escritura</option>
+						<option value ="4" id="category">Escritores</option>
+						<option value ="5" id="category">#JustWriteIt</option>
 					</select>
 				</li>
-				<li class="col-md-4">
+				<li>
 					<div class="SearchBar">
 						<input type="text" name="Search_bar" id="Search_bar" placeholder="Busca historias y personas" required>
-						<link rel="icon" type="image.png" href="IMG/lupita.png"/>
+						<button class="button"> <input type="image" src="IMG/lupita.png" alt="Search" id="lupita"></button>
 					</div>
 				</li>
-				<li class="col-md-1">
-					<a href="/" title="Perfil">Perfil</a>
+				<li>
+					<a href="/" title="Perfil" class="Perfil">Perfil</a>
 				</li>
 			</ul>
 		</nav>	
