se agregan secciones

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<li>
 					<div class="SearchBar">
 						<input type="text" name="Search_bar" id="Search_bar" placeholder="Busca historias y personas" required>
-						<button class="button"> <input type="image" src="IMG/lupita.png" alt="Search" id="lupita"></button>
+						<button type="Submit" id="button"><input type="image" src="IMG/lupita.png" alt="Search" id="lupita"></button>
 					</div>
 				</li>
 				<li>
@@ -73,6 +73,17 @@
 			</ul>
 		</nav>	
 	</section>
-	<section></section>	
+	<section>
+		<h4 class="col-1 col-md-2 col-lg-3">
+			<a href="/" title="Seguir leyendo">Seguir leyendo</a>
+		</h4>
+		<h5>Encuentra más en tu biblioteca</h5>
+	</section>	
+	<section></section>
+	<section></section>
+	<section></section>
+	<section></section>
+	<section></section>
+	<section></section>
 </body>
 </html>
