--- a/index.html
+++ b/index.html
@@ -78,63 +78,67 @@
 			</section>
 			<section>
 				<div class="fluid-container">
-						<div class="row">
-							<h2>
-							<a href="/" title="Seguir">Seguir Leyendo  > </a>
-							</h2>
-						</div>
-						<div class="row">
-							<h3>Encuentra más en tu biblioteca</h3>
-						</div>
-						<div class="slider" id="slider">
-  							<div class="holder">
-   								<div class="slide" id="slide-0"><span class="temp"><img src="IMG/cara.jpg"/></span></div>
-    							<div class="slide" id="slide-1"><span class="temp"><img src="IMG/cara.jpg"/></span></div>
-    							<div class="slide" id="slide-0"><span class="temp"><img src="IMG/cara.jpg"/></span></div>
-    							<div class="slide" id="slide-1"><span class="temp"><img src="IMG/cara.jpg"/></span></div>
-    							<div class="slide" id="slide-2"><span class="temp"><img src="IMG/cara.jpg"/></span></div>
-  							</div>
+					<div class="row">
+						<h2>
+						<a href="/" title="Seguir">Seguir Leyendo  > </a>
+						</h2>
+					</div>
+					<div class="row">
+						<h3>Encuentra más en tu biblioteca</h3>
+					</div>
+					<div class="slider" id="slider">
+						<div class="holder">
+							<div class="slide" id="slide-0"><span class="temp">
+								<img src="IMG/cara.jpg"/>
+								<h5>LOREM IPSUM</h5>
+							</span></div>
+							<div class="slide" id="slide-1"><span class="temp"><img src="IMG/cara.jpg"/></span></div>
+							<div class="slide" id="slide-0"><span class="temp"><img src="IMG/cara.jpg"/></span></div>
+							<div class="slide" id="slide-1"><span class="temp"><img src="IMG/cara.jpg"/></span></div>
+							<div class="slide" id="slide-2"><span class="temp"><img src="IMG/cara.jpg"/></span></div>
 						</div>
 					</div>
-			</section>
-			<section>
-					<div class="fluid-container">
-						<div class="row">
-							<h2>
-							<a href="/" title="Recomendaciones">Recomendaciones</a>
-							</h2>
-						</div>
-						<div class="row">
-							<h3>Un nuevo set de historias solo para ti</h3>
-						</div>
-					</div>
-				</section>
-				<section>
-					<div class="fluid-container">
-						<div class="row">
-							<h2>
-							<a href="/" title="Votación">Porque votaste en Tiempo de Gigantes ></a>
-							</h2>
-						</div>
-						<div class="row">
-							<h3>Creemos que también te gustarán estas historias</h3>
-						</div>
-					</div>
-				</section>
-				<section>
-					<div class="fluid-container">
-						<div class="row">
-							<h2>
-							<a href="/" title="Actualizaciones">Recientemente Actualizadas</a>
-							</h2>
-						</div>
-						<div class="row">
-							<h3>Historias de tu biblioteca y colecciones</h3>
-						</div>
-					</section>
+				</div>
+			</div>
+		</section>
+		<section>
+			<div class="fluid-container">
+				<div class="row">
+					<h2>
+					<a href="/" title="Recomendaciones">Recomendaciones</a>
+					</h2>
+				</div>
+				<div class="row">
+					<h3>Un nuevo set de historias solo para ti</h3>
+				</div>
+			</div>
+		</section>
+		<section>
+			<div class="fluid-container">
+				<div class="row">
+					<h2>
+					<a href="/" title="Votación">Porque votaste en Tiempo de Gigantes ></a>
+					</h2>
+				</div>
+				<div class="row">
+					<h3>Creemos que también te gustarán estas historias</h3>
+				</div>
+			</div>
+		</section>
+		<section>
+			<div class="fluid-container">
+				<div class="row">
+					<h2>
+					<a href="/" title="Actualizaciones">Recientemente Actualizadas</a>
+					</h2>
+				</div>
+				<div class="row">
+					<h3>Historias de tu biblioteca y colecciones</h3>
 				</div>
 			</section>
 		</div>
-	</main>
+	</section>
+</div>
+</main>
 </body>
 </html>
