--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 		<meta charset="UTF-8">
 		<title>Inicio - Kittpad</title>
 		<link rel="icon" type="image/png" href="IMG/k.ico"/>
-		<link rel="stylesheet" href="https://gist.github.com/62045e3b4596e7b8982b6c6472ccdd65"/>
 		<link rel="stylesheet" href="CSS/main.css"/>
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
 	</head>
 	<body>
 		<main class="container">
@@ -67,7 +67,7 @@
 						<li>
 							<div class="SearchBar">
 								<input type="text" name="Search_bar" id="Search_bar" placeholder="Busca historias y personas" required>
-								<button type="Submit" id="button"><input type="image" src="IMG/lupita.png" alt="Search" id="lupita"></button>
+								<button type="Submit" id="button"><input type="image" src="IMG/lupita.png" alt="Search" id="lupita"><a href="/" title="buscar" class="buscar"></a></button>
 							</div>
 						</li>
 						<li>
@@ -76,7 +76,7 @@
 					</ul>
 				</nav>
 			</section>
-			<section>
+			<section class="second">
 				<div class="fluid-container">
 					<div class="row">
 						<h2>
@@ -86,22 +86,26 @@
 					<div class="row">
 						<h3>Encuentra más en tu biblioteca</h3>
 					</div>
-					<div class="slider" id="slider">
-						<div class="holder">
-							<div class="slide" id="slide-0"><span class="temp">
-								<img src="IMG/cara.jpg"/>
-								<h5>LOREM IPSUM</h5>
-							</span></div>
-							<div class="slide" id="slide-1"><span class="temp"><img src="IMG/cara.jpg"/></span></div>
-							<div class="slide" id="slide-0"><span class="temp"><img src="IMG/cara.jpg"/></span></div>
-							<div class="slide" id="slide-1"><span class="temp"><img src="IMG/cara.jpg"/></span></div>
-							<div class="slide" id="slide-2"><span class="temp"><img src="IMG/cara.jpg"/></span></div>
-						</div>
+					<div class="row">
+						<section id="articles" class="col-8 col-lg-8">
+							<div class="slider" id="slider">
+								<div class="holder">
+									<div class="slide" id="slide-0"><span class="temp">
+										<img src="IMG/cara.jpg"/>
+										<h5>LOREM IPSUM</h5>
+									</span></div>
+									<div class="slide" id="slide-1"><span class="temp"><img src="IMG/cara.jpg"/></span></div>
+									<div class="slide" id="slide-0"><span class="temp"><img src="IMG/cara.jpg"/></span></div>
+									<div class="slide" id="slide-1"><span class="temp"><img src="IMG/cara.jpg"/></span></div>
+									<div class="slide" id="slide-2"><span class="temp"><img src="IMG/cara.jpg"/></span></div>
+								</div>
+							</div>
+						</section>
 					</div>
 				</div>
 			</div>
 		</section>
-		<section>
+		<section class="third">
 			<div class="fluid-container">
 				<div class="row">
 					<h2>
@@ -111,9 +115,21 @@
 				<div class="row">
 					<h3>Un nuevo set de historias solo para ti</h3>
 				</div>
+				<div class="slider" id="slider">
+					<div class="holder">
+						<div class="slide" id="slide-0"><span class="temp">
+							<img src="IMG/cara.jpg"/>
+							<h5>LOREM IPSUM</h5>
+						</span></div>
+						<div class="slide" id="slide-1"><span class="temp"><img src="IMG/cara.jpg"/></span></div>
+						<div class="slide" id="slide-0"><span class="temp"><img src="IMG/cara.jpg"/></span></div>
+						<div class="slide" id="slide-1"><span class="temp"><img src="IMG/cara.jpg"/></span></div>
+						<div class="slide" id="slide-2"><span class="temp"><img src="IMG/cara.jpg"/></span></div>
+					</div>
+				</div>
 			</div>
 		</section>
-		<section>
+		<section class="fourth">
 			<div class="fluid-container">
 				<div class="row">
 					<h2>
@@ -123,9 +139,21 @@
 				<div class="row">
 					<h3>Creemos que también te gustarán estas historias</h3>
 				</div>
+				<div class="slider" id="slider">
+					<div class="holder">
+						<div class="slide" id="slide-0"><span class="temp">
+							<img src="IMG/cara.jpg"/>
+							<h5>LOREM IPSUM</h5>
+						</span></div>
+						<div class="slide" id="slide-1"><span class="temp"><img src="IMG/cara.jpg"/></span></div>
+						<div class="slide" id="slide-0"><span class="temp"><img src="IMG/cara.jpg"/></span></div>
+						<div class="slide" id="slide-1"><span class="temp"><img src="IMG/cara.jpg"/></span></div>
+						<div class="slide" id="slide-2"><span class="temp"><img src="IMG/cara.jpg"/></span></div>
+					</div>
+				</div>
 			</div>
 		</section>
-		<section>
+		<section class="fifth">
 			<div class="fluid-container">
 				<div class="row">
 					<h2>
@@ -135,10 +163,20 @@
 				<div class="row">
 					<h3>Historias de tu biblioteca y colecciones</h3>
 				</div>
-			</section>
-		</div>
-	</section>
-</div>
-</main>
+				<div class="slider" id="slider">
+					<div class="holder">
+						<div class="slide" id="slide-0"><span class="temp">
+							<img src="IMG/cara.jpg"/>
+							<h5>LOREM IPSUM</h5>
+						</span></div>
+						<div class="slide" id="slide-1"><span class="temp"><img src="IMG/cara.jpg"/></span></div>
+						<div class="slide" id="slide-0"><span class="temp"><img src="IMG/cara.jpg"/></span></div>
+						<div class="slide" id="slide-1"><span class="temp"><img src="IMG/cara.jpg"/></span></div>
+						<div class="slide" id="slide-2"><span class="temp"><img src="IMG/cara.jpg"/></span></div>
+					</div>
+				</div>
+			</div>
+		</section>
+	</main>
 </body>
 </html>
