se hacen cambios en lupa para ponerse de background

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<li>
 							<div class="SearchBar">
 								<input type="text" name="Search_bar" id="Search_bar" placeholder="Busca historias y personas" required>
-								<button type="Submit" id="button"><input type="image" src="IMG/lupita.png" alt="Search" id="lupita"><a href="/" title="buscar" class="buscar"></a></button>
+								<button type="Submit" id="button"><input type="image" background src="IMG/lupita.png" alt="Search" id="lupita"><a href="/" title="buscar" class="buscar"></a></button>
 							</div>
 						</li>
 						<li>
